<resources>
    <string name="app_name">quizzApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="accueil">Accueil</string>
    <string name="toto">Toto</string>
    <string name="prenom">Prenom</string>
    <string name="mon_profile">Mon Profile</string>
    <string name="prenombis">Prenom: </string>
    <string name="nom">Nom</string>
    <string name="username">UserName: </string>
    <string name="email">Email:</string>
    <string name="mot_de_passe">Mot de passe: </string>
    <string name="numero_de_t_l_phone">Numero de téléphone: </string>
    <string name="user">User</string>
    <string name="question_modifier">Que voulez vous modifier?</string>
    <string name="email2">Email</string>
    <string name="telephone2">Telephone</string>
    <string name="mot_de_passe2">Mot de Passe</string>
    <string name="phrase_invite1">Si vous n\'avez pas encor de compte, Incrivez-vous dès maintenant!</string>
    <string name="compte">Compte</string>
    <string name="reglages">Réglages</string>
    <string name="jouer">Jouer</string>

    <string name="title_activity_game">GameActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="ajouter_une_question">Ajouter une question :</string>
    <string name="ajouter">Ajouter</string>
    <string name="questions">Questions :</string>
    <string name="tout">Tout</string>
    <string name="supprimer">Supprimer</string>
    <string name="modifier">Modifier</string>
    <string name="la_vraie_reponse">la vraie reponse:</string>
    <string name="fausse_reponse1">fausse reponse1:</string>
    <string name="fausse_reponse2">fausse reponse2:</string>
    <string name="fausse_reponse3">fausse reponse3:</string>
    <string name="nom_complet">Nom complet</string>
    <string name="register_me_tv">Pas encore inscrit ? Créer un compte</string>
    <string name="send">Envoyer</string>
    <string name="password">Mot de passe</string>
    <string name="email_hint">Email</string>
    <string name="login">Me connecter</string>
    <string name="registration">Créer un compte</string>
    <string name="firstname_hint">Prénom</string>
    <string name="lastname_hint">Nom</string>
    <string name="username_hint">Nom utilisateur</string>
    <string name="already_registered">Déjà inscrit ? Me connecter</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="label_1">Facile</string>
    <string name="label_2">Moyen</string>
    <string name="label_3">Difficile</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>