<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/registration_fragment"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo_iv"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/registration_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:textColor="@color/design_default_color_primary"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/firstname_et"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:hint="@string/firstname_hint"
        android:textSize="20sp"
        android:drawablePadding="10dp"
        app:drawableStartCompat="@drawable/ic_person"/>

    <EditText
        android:id="@+id/lastname_et"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:hint="@string/lastname_hint"
        android:textSize="20sp"
        android:drawablePadding="10dp"
        app:drawableStartCompat="@drawable/ic_baseline_person_outline_24"/>

    <EditText
        android:id="@+id/username_et"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:hint="@string/username_hint"
        android:textSize="20sp"
        android:drawablePadding="10dp"
        app:drawableStartCompat="@drawable/ic_baseline_games_24"/>

    <EditText
        android:id="@+id/email_et"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:hint="@string/email_hint"
        android:textSize="20sp"
        android:drawablePadding="10dp"
        app:drawableStartCompat="@drawable/email_icon"/>

    <EditText
        android:id="@+id/password_et"
        android:layout_width="300dp"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="10dp"
        android:drawablePadding="10dp"
        app:drawableStartCompat="@drawable/ic_baseline_lock_24"/>

    <Button
        android:id="@+id/login_btn"
        android:layout_marginTop="20dp"
        android:layout_width="150dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/send" />

    <TextView
        android:id="@+id/back_to_login_link_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_registered"
        android:textColor="@color/design_default_color_primary"
        android:textSize="15sp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"/>

</LinearLayout>